# Niche

./: .gitignore  Cargo.toml  config.example.json
.github/workflows/: release.yml
src/: main.rs
src/cli/: commands.rs  file_ref.rs  mod.rs  output.rs  repl.rs  session.rs  spinner.rs
src/core/: agent.rs  client.rs  config.rs  mod.rs  types.rs
src/core/tools/: edit_file.rs  glob_tool.rs  grep.rs  list_files.rs  mod.rs  read_file.rs  run_command.rs  write_file.rs
